# datamine-hub

./: .env  .env.example  .gitignore  README.md  agent_base.py  agent_lattice_scraper.py  agent_refiner.py  agent_runner.py  cli.py  main.py  pyproject.toml  requirements.txt
agents/: agent_base.py  agent_lattice_scraper.py  agent_miner.py  agent_refiner.py
app/: main.py
app/api/: admin.py  board.py  data.py  jobs.py
app/core/: config.py  security.py  ui.py  websockets.py
app/db/: database.py  schema.sql
app/models/: schemas.py
data/: datamine.db
